<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.buscis_c2_l9.projectapp.Main2Activity">


    <RadioGroup
        android:id="@+id/LanguageOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintVertical_bias="0.227"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/Englisghlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/englishlang"/>
        <RadioButton
            android:id="@+id/Spanishlang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/spanishlang" />
        <RadioButton
            android:id="@+id/Chineselang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chineselang" />
        <RadioButton
            android:id="@+id/Arabiclang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/arabiclang" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:background="@color/colorPrimaryDark"
        android:dropDownWidth="match_parent"
        android:entries="@id/spinner"
        android:popupBackground="@color/colorPrimary"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/PickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PickDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintVertical_bias="0.498"/>

    <Button
        android:id="@+id/PickTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PickTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintVertical_bias="0.63"/>
</android.support.constraint.ConstraintLayout>
